# PagedAttention-Based-Transformer-Decoder-Inference-Framework

./: CMakeLists.txt  README.md  requirements.txt  setup.py
api/: README.md  main.py  router.py  schema.py  tokenizer.py
attention/: README.md  attention_config.hpp  attention_cuda.cu  attention_cuda.hpp  attention_kernel_utils.cuh  attention_tile_launcher.hpp  paged_flash_attention_kernel_fused.cu  paged_flash_attention_kernel_fused_overlap.cu  top_k_top_p_filter.cuh  vec.hpp  warp_softmax.cuh
attention_cpu/: README.md  attention_cpu.cpp  attention_cpu.hpp  attention_kernel_utils_cpu.hpp  cpu_attention_config.hpp  cpu_attention_kernel.cpp  cpu_attention_kernel.hpp  dnnl_matmul_int8.cpp  dnnl_matmul_int8.hpp  int8_quant.cpp  int8_quant.hpp  softmax_lut.cpp  softmax_lut.hpp  vec_cpu.hpp
cli/: README.md  chat_cli.py  cli_app.py  generate_batch.py  generate_cli.py  log_cli.py  rerank_eval.py  rerank_jsonl_builder.py  stream_cli.py
config/: README.md  chat_template.json  model_config.yaml  paths.json  runtime_config.yaml  weight_paths.yaml
decoder/: README.md  cuda_decoder.cu  cuda_decoder.hpp  decoder_block.hpp  int8_decoder.cpp  int8_decoder.hpp  layer_norm.hpp  mlp.hpp  token_embedding.hpp
include/: bindings.hpp
kv_cache/: README.md  kv_tile_cache.cpp  kv_tile_cache.hpp  kv_tile_cache_cpu.cpp  kv_tile_cache_cpu.hpp  page_table.cpp  page_table.hpp
reranker/: README.md  export_jsonl.py  finetune.py  plot_tree.py  reranker.cpp  reranker.hpp  reranker_model.cpp  reranker_model.hpp
src/: bindings.cpp
web/: README.md  app.py  backend_router.py  config.py  (+1 more)
(+1 files in other folders)
